--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "^14.0.4",
     "gsap": "^3.11.4",
     "next": "^14.0.4",
+    "next-video": "^0.16.0",
     "next-videos": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
