--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "next-videos": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.7.1",
+    "react-toastify": "^10.0.5",
     "swiper": "^8.4.5"
   }
 }
